os-envitest module to generate a testing dynamic library